[package]
name = "helios"
version = "0.6.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tree-sitter = "0.26"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
